# metashade-glTFSample

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conftest.py  pyproject.toml  requirements.txt  vcpkg.json
.github/: SUBMODULE_UPDATE_SETUP.md  metashade-repository-workflow-example.yml
.github/workflows/: python-package.yml  update-metashade-submodule.yml
src/: __init__.py  _glsl.py  _hlsl.py  _shader_base.py  generate.py
src/_impl/: _common.py  _pbr_surf_lib.py  material_textures.py  ps.py  vs.py
tests/: test_generate.py
