[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metashade-gltf-sample"
version = "0.1.0"
description = "glTF sample using metashade"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygltflib==1.16.4",
    "pytest>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black",
    "isort",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["metashade/tests", "tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"